src/test/ui/associated-type-bounds/assoc-type-eq-with-dyn-atb-fail.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/assoc-type-eq-with-dyn-atb-fail.rs:33:9
   |
LL |         Box::new(AssocNoCopy)
   |         ^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
   = note: required for the cast to the object type `dyn Bar<Assoc = <AssocNoCopy as Thing>::Out::{opaque#0}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
